# pyawskit

./: .gitignore  .myenv  .mypy.ini  README.md  README.rst  boot.py  prep_machine.sh  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.cfg  setup.py  setup.sh  ubuntu_packages_needed_dev.txt
config/: project.py  python.py  version.py
doc/: TODO.txt  boto_notes.txt  links.txt
pyawskit/: aws.py  aws_codeartifact_npm_env_config.py  aws_codeartifact_npm_env_config_code.py  aws_codeartifact_pip_env_config.py  aws_codeartifact_pip_env_config_code.py  aws_ecr_login.py  aws_ecr_login_code.py  common.py  configs.py  devices.py  inet.py  main.py  os.py  os_utils.py  roles.py  static.py  utils.py  version.py
pyawskit/endpoints/: group_default.py  main.py
pyawskit/scripts/: compress_s3_folder.py  generate_etc_hosts.py  generate_ssh_config.py  generate_tilde_hosts.py  launch_machine.py  prep_account.py  prep_machine.py  show_disks.py
scripts/: common.py  copy_to_machine.py  from_mine.sh  install_from_pypi.sh  prep_machine.sh  register.py  upload.py
src/awskit/: ak_compress_s3_folder.py  ak_generate_ssh_config.py  ak_launch_machine.py  ak_prep_machine.py  ak_unify_disks.py  generate_ssh_config.py  pipegzip.py  prep_machine.py
src/pyawskit/: ak_copy_to_machine.py  ak_generate_etc_hosts.py  ak_generate_ssh_config.py  ak_generate_tilde_hosts.py  ak_mount_disks.py  ak_prep_machine.py  ak_show_disks.py  ak_unify_disks.py  aws.py  aws_codeartifact_npm_env_config_code.py  aws_codeartifact_pip_env_config_code.py  aws_ecr_login_code.py  common.py  configs.py  devices.py  main.py  os_utils.py  roles.py  static.py  utils.py
src/pyawskit/scripts/: compress_s3_folder.py  copy_to_machine.py  generate_etc_hosts.py  generate_ssh_config.py  generate_tilde_hosts.py  launch_machine.py  mount_disks.py  prep_account.py  prep_machine.py  show_disks.py  (+1 more)
support/: from_mine.sh  list_of_packages.txt  prep_machine.sh  setup.sh  user_data.txt
templates/: README.md.mako  README.rst.mako  setup.py.mako
