[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyawskit"
version = "0.1.87"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pyawskit is your AWS Swiss Army Knife"
readme = "README.md"
license = "MIT"
keywords=[
    "aws",
    "utils",
    "python",
    "api",
    "command",
    "line",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pylogconf",
    "pyfakeuse",
    "pypipegzip",
    "tqdm",
    "requests",
    "boto3",
    "pymount",
    "ujson",
    "sultan",
    "pytconf",
    "pyapikey",
    "furl",
    "docker-py",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyawskit"
"Bug Tracker" = "https://github.com/veltzer/pyawskit/issues"
"Documentation" = "https://veltzer.github.io/pyawskit"
"Download" = "https://pypi.org/project/pyawskit/"
"Repository" = "https://github.com/veltzer/pyawskit"

[project.scripts]
pyawskit = "pyawskit.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyawskit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyawskit/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
